--- a/docker-compose-openvidu.yml
+++ b/docker-compose-openvidu.yml
@@ -1,22 +1,49 @@
-version: "3.1"
+x-environments: &default
+  env_file: .env # 기본 환경 파일을 지정합니다.
 
 services:
+  kms:
+    image: kurento/kurento-media-server:latest
+    container_name: kms
+    expose:
+      - "8888"
+      - "40000/udp"
+    <<: *default
+    networks:
+      - openvidu_test
+    
   openvidu-server:
-    image: openvidu/openvidu-server-kms:2.23.0
+    image: openvidu/openvidu-server:2.28.0
     container_name: openvidu-server
-    ports:
-      - "4443:4443"
+    expose:
+      - "5443"
+    <<: *default
+    networks:
+      - openvidu_test
     environment:
-      - OPENVIDU_SECRET=1234
-      - OPENVIDU_CDR=true
-      - OPENVIDU_CDR_PATH=/opt/openvidu/cdr
-      - OPENVIDU_RECORDING=true
-      - OPENVIDU_RECORDING_PATH=/opt/openvidu/recordings
-      - OPENVIDU_RECORDING_CUSTOM_LAYOUT=/opt/openvidu/custom-layout
-      - OPENVIDU_RECORDING_AUTOSTOP_TIMEOUT=120
+      - OPENVIDU_SECRET=${OPENVIDU_SECRET}
+      - DOMAIN_OR_PUBLIC_IP=${DOMAIN_OR_PUBLIC_IP}
+      - KMS_URIS=${KMS_URIS}
+      - OPENVIDU_CDR=${OPENVIDU_CDR}
+      - OPENVIDU_CDR_PATH=${OPENVIDU_CDR_PATH}
+      - OPENVIDU_RECORDING=${OPENVIDU_RECORDING}
+      - OPENVIDU_RECORDING_PATH=${OPENVIDU_RECORDING_PATH}
+      - OPENVIDU_RECORDING_CUSTOM_LAYOUT=${OPENVIDU_RECORDING_CUSTOM_LAYOUT}
+      - OPENVIDU_RECORDING_AUTOSTOP_TIMEOUT=${OPENVIDU_RECORDING_AUTOSTOP_TIMEOUT}
+      - SERVER_SSL_ENABLED=${SERVER_SSL_ENABLED}
+      - SERVER_PORT=${SERVER_PORT}
     volumes:
       - ./openvidu/recordings:/opt/openvidu/recordings
       - ./openvidu/custom-layout:/opt/openvidu/custom-layout
       - ./openvidu/cdr:/opt/openvidu/cdr
-      - //var/run/docker.sock:/var/run/docker.sock # for Windows
-      # - /var/run/docker.sock:/var/run/docker.sock # for Linux
+      - //var/run/docker.sock:/var/run/docker.sock # for Linux
+    depends_on:
+      mysql:
+        condition: service_healthy
+
+networks:
+  openvidu_test:
+    external: true
+
+volumes:
+  mysql_data:
